--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,49 @@
-# Core Dependencies
+paddlepaddle-gpu>=2.5.0
+paddlets>=1.1.0
+paddlenlp>=2.5.0
 numpy>=1.21.0
-pandas>=1.5.1
-scipy>=1.9.0
-scikit-learn>=1.1.0
-
-# Deep Learning Frameworks - Use PaddlePaddle as primary framework
-paddlepaddle>=2.5.0
-paddlepaddle-gpu>=2.5.0; sys_platform != "darwin"  # GPU version for non-macOS
-paddlets>=1.0.0  # PaddlePaddle Time Series library
-transformers>=4.40.1
-accelerate>=0.20.0
-
-# Time Series and Data Processing
-einops>=0.6.0
-statsmodels>=0.14.0
-
-# Configuration and Serialization
-pyyaml>=6.0
-safetensors>=0.3.0
-datasets>=2.18.0
-
-# Visualization and Monitoring
-matplotlib>=3.5.0
+pandas>=1.3.0
+scipy>=1.7.0
+scikit-learn>=1.0.0
+matplotlib>=3.4.0
 seaborn>=0.11.0
-tensorboard>=2.12.0
-tqdm>=4.64.0
-
-# API and Web Interface
-fastapi>=0.100.0
-uvicorn>=0.22.0
-pydantic>=2.0.0
-
-# Development and Testing
+plotly>=5.0.0
+polars>=0.18.0
+pyarrow>=8.0.0
+statsmodels>=0.13.0
+arch>=5.3.0
+pyyaml>=6.0
+omegaconf>=2.1.0
+hydra-core>=1.1.0
+tqdm>=4.62.0
+fastapi>=0.85.0
+pydantic>=1.9.0
 pytest>=7.0.0
 pytest-cov>=4.0.0
-black>=23.0.0
-flake8>=6.0.0
-
-# Optional Dependencies
-# Uncomment based on specific needs:
-# flash-attn>=2.0.0  # For flash attention (CUDA required)
-# bitsandbytes>=0.41.0  # For quantization
-# peft>=0.4.0  # For parameter-efficient fine-tuning
-
-# Note: Migrated from PyTorch to PaddlePaddle:
-# - Replaced torch/torchvision/torchaudio with paddlepaddle
-# - Added paddlets for time series specific functionality
-# - Removed conflicting PyTorch dependencies
-# - llamafactory (should be installed separately if needed)
-# - dash (for web UI, can be added if needed)
+black>=22.0.0
+flake8>=5.0.0
+mypy>=0.991
+optuna>=3.0.0
+hyperopt>=0.2.7
+wandb>=0.13.0
+tensorboard>=2.9.0
+h5py>=3.7.0
+zarr>=2.12.0
+xgboost>=1.6.0
+lightgbm>=3.3.0
+catboost>=1.1.0
+pytz>=2022.1
+tzdata>=2022.1
+click>=8.0.0
+rich>=12.0.0
+memory-profiler>=0.60.0
+requests>=2.28.0
+urllib3>=1.26.0
+einops>=0.6.0
+sktime>=0.13.0
+tslearn>=0.5.0
+marshmallow>=3.17.0
+marshmallow-dataclass>=8.5.0
+passlib>=1.7.4
+python-jose>=3.3.0
+python-multipart>=0.0.5
